--- a/.github/workflows/format-black.yml
+++ b/.github/workflows/format-black.yml
@@ -1,11 +1,8 @@
-name: black-action
+name: Lint
 on: [push, pull_request]
 jobs:
-  linter_name:
-    name: runner / black formatter
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: datadog/action-py-black-formatter@v2.1
-        with:
-          check_mode: "true"
+      - uses: actions/checkout@v3
+      - uses: psf/black@stable
