--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,107 @@
 -e .
+
+altair==5.2.0
+asttokens==2.4.1
+attrs==23.1.0
+beautifulsoup4==4.12.2
+black==23.12.1
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+chromedriver-autoinstaller==0.6.3
+click==8.1.7
+colorama==0.4.6
+comm==0.2.0
+contourpy==1.2.0
+cycler==0.12.1
+debugpy==1.8.0
+decorator==5.1.1
+exceptiongroup==1.2.0
+executing==2.0.1
+fonttools==4.47.0
+gitdb==4.0.11
+GitPython==3.1.40
+h11==0.14.0
+idna==3.6
+importlib-metadata==6.11.0
+ipykernel==6.28.0
+ipython==8.19.0
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.0
+jupyter_core==5.5.1
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+nltk==3.8.1
+numpy==1.26.2
+outcome==1.3.0.post0
+packaging==23.2
+pandas==2.1.4
+parso==0.8.3
+pathspec==0.12.1
+Pillow==10.1.0
+platformdirs==4.1.0
+prompt-toolkit==3.0.43
+protobuf==4.25.1
+psutil==5.9.7
+pure-eval==0.2.2
+pyarrow==14.0.2
+pycparser==2.21
+pydeck==0.8.1b0
+Pygments==2.17.2
+pyparsing==3.1.1
+PyPDF2==3.0.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+pywin32==306
+pyzmq==25.1.2
+referencing==0.32.0
+regex==2023.12.25
+requests==2.31.0
+rich==13.7.0
+rpds-py==0.16.2
+scikit-learn==1.3.2
+scipy==1.11.4
+selenium==4.16.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+spicy==0.16.0
+stack-data==0.6.3
+streamlit==1.30.0
+tenacity==8.2.3
+threadpoolctl==3.2.0
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.0
+trio==0.23.2
+trio-websocket==0.11.1
+typing_extensions==4.9.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==2.1.0
+validators==0.22.0
+watchdog==3.0.0
+wcwidth==0.2.12
+webdriver-manager==4.0.1
+wordcloud==1.9.3
+wsproto==1.2.0
+zipp==3.17.0
