--- a/requirements.txt
+++ b/requirements.txt
@@ -22,14 +22,14 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fonttools==4.47.0
 gitdb==4.0.11
-GitPython==3.1.40
+GitPython==3.1.41
 h11==0.14.0
 idna==3.6
 importlib-metadata==6.11.0
 ipykernel==6.28.0
 ipython==8.19.0
 jedi==0.19.1
-Jinja2==3.1.2
+jinja2>=3.1.3
 joblib==1.3.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
@@ -61,7 +61,7 @@ pycparser==2.21
 pydeck==0.8.1b0
 Pygments==2.17.2
 pyparsing==3.1.1
-PyPDF2==3.0.1
+PyPDF2>=3.9.0
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
